@@ -97,18 +97,16 @@ PWMscore <- function(pwm, subject, start=1)
 ### subject: a DNAString object containing the subject sequence
 ### min.score: given as a percentage (e.g. "90%") of the highest possible
 ###            score or as a single number
-.matchPWM <- function(pwm, subject, min.score, count.only=FALSE)
+.XString.matchPWM <- function(pwm, subject, min.score, count.only=FALSE)
 {
     ## checking 'pwm'
     pwm <- .normargPwm(pwm)
-    ## checking 'subject'
-    subject <- .normargSubject(subject)
     ## checking 'min.score'
     min.score <- .normargMinScore(min.score, pwm)
     ## no need to check 'count.only' (not a user controlled argument)
 
     base_codes <- xscodes(subject, baseOnly=TRUE)
-    C_ans <- .Call("match_PWM",
+    C_ans <- .Call("XString_match_PWM",
                    pwm, subject, base_codes, min.score, count.only,
                    PACKAGE="Biostrings")
     if (count.only)
@@ -116,14 +114,94 @@ PWMscore <- function(pwm, subject, start=1)
     unsafe.newXStringViews(subject, start(C_ans), width(C_ans))
 }
 
-### 
-matchPWM <- function(pwm, subject, min.score="80%")
+.XStringViews.matchPWM <- function(pwm, subject, min.score, count.only=FALSE)
 {
-    .matchPWM(pwm, subject, min.score)
+    ## checking 'pwm'
+    pwm <- .normargPwm(pwm)
+    ## checking 'min.score'
+    min.score <- .normargMinScore(min.score, pwm)
+    ## no need to check 'count.only' (not a user controlled argument)
+
+    base_codes <- xscodes(subject, baseOnly=TRUE)
+    C_ans <- .Call("XStringViews_match_PWM",
+                   pwm,
+                   subject(subject), start(subject), width(subject),
+                   base_codes, min.score, count.only,
+                   PACKAGE="Biostrings")
+    if (count.only)
+        return(C_ans)
+    unsafe.newXStringViews(subject(subject), start(C_ans), width(C_ans))
 }
 
-countPWM <- function(pwm, subject, min.score="80%")
-{
-    .matchPWM(pwm, subject, min.score, count.only=TRUE)
-}
+### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+### The "matchPWM" generic and methods.
+###
 
+setGeneric("matchPWM", signature="subject",
+    function(pwm, subject, min.score="80%")
+        standardGeneric("matchPWM")
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("matchPWM", "character",
+    function(pwm, subject, min.score="80%")
+        matchPWM(pwm, DNAString(subject), min.score)
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("matchPWM", "DNAString",
+    function(pwm, subject, min.score="80%")
+        .XString.matchPWM(pwm, subject, min.score)
+)
+
+### Dispatch on 'subject' (see signature of generic).
+### WARNING: Unlike the other "matchPWM" methods, the XStringViews object
+### returned by this method is not guaranteed to have its views ordered from
+### left to right in general! One important particular case where this is
+### guaranteed though is when 'isNormal(subject)' is TRUE (i.e. 'subject' is
+### a normal XStringViews object) and 'max.mismatch=0' (no "out of limits"
+### matches).
+setMethod("matchPWM", "XStringViews",
+    function(pwm, subject, min.score="80%")
+        .XStringViews.matchPWM(pwm, subject, min.score)
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("matchPWM", "MaskedDNAString",
+    function(pwm, subject, min.score="80%")
+        matchPWM(pwm, toXStringViewsOrXString(subject), min.score)
+)
+
+
+### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+### The "countPWM" generic and methods.
+###
+
+setGeneric("countPWM", signature="subject",
+    function(pwm, subject, min.score="80%")
+        standardGeneric("countPWM")
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("countPWM", "character",
+    function(pwm, subject, min.score="80%")
+        countPWM(pwm, DNAString(subject), min.score)
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("countPWM", "DNAString",
+    function(pwm, subject, min.score="80%")
+        .XString.matchPWM(pwm, subject, min.score, count.only=TRUE)
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("countPWM", "XStringViews",
+    function(pwm, subject, min.score="80%")
+        .XStringViews.matchPWM(pwm, subject, min.score, count.only=TRUE)
+)
+
+### Dispatch on 'subject' (see signature of generic).
+setMethod("countPWM", "MaskedDNAString",
+    function(pwm, subject, min.score="80%")
+        countPWM(pwm, toXStringViewsOrXString(subject), min.score)
+)
